syntax = "proto3";
package Stridelabs.stride.stakeibc;

import "stakeibc/epoch_tracker.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/Stride-Labs/stride/x/stakeibc/types";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

// Msg defines the Msg service.
service Msg {
      rpc LiquidStake(MsgLiquidStake) returns (MsgLiquidStakeResponse);
      rpc RedeemStake(MsgRedeemStake) returns (MsgRedeemStakeResponse);
      // TODO(TEST-53): Remove this pre-launch (no need for clients to create / interact with ICAs)
      // Register defines a rpc handler for MsgRegisterAccount
      rpc RegisterAccount(MsgRegisterAccount) returns (MsgRegisterAccountResponse);
      // TODO(TEST-53): Remove this pre-launch (no need for clients to create / interact with ICAs)
      rpc SubmitTx(MsgSubmitTx) returns (MsgSubmitTxResponse);
      // TODO(TEST-53): Remove this pre-launch (no need for clients to create / interact with ICAs)
      rpc RegisterHostZone(MsgRegisterHostZone) returns (MsgRegisterHostZoneResponse);
  rpc ClaimUndelegatedTokens(MsgClaimUndelegatedTokens) returns (MsgClaimUndelegatedTokensResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgLiquidStake {
  string creator = 1;
  int64 amount = 2;
  // TODO(TEST-86): Update Denom -> HostDenom
  string host_denom = 3;
}

message MsgLiquidStakeResponse {
}

message MsgRedeemStake {
  string creator = 1;
  int64 amount = 2;
  string hostZone = 3;
  string receiver = 4;
}

message MsgRedeemStakeResponse {
}

// TODO(TEST-53): Remove this pre-launch (no need for clients to create / interact with ICAs)
// MsgRegisterAccount defines the payload for Msg/RegisterAccount
message MsgRegisterAccount {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string owner                      = 1;
  string connection_id              = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
}
// TODO(TEST-53): Remove this pre-launch (no need for clients to create / interact with ICAs)
// MsgRegisterAccountResponse defines the response for Msg/RegisterAccount
message MsgRegisterAccountResponse {}

// TODO(TEST-53): Remove this pre-launch (no need for clients to create / interact with ICAs)
// MsgSubmitTx defines the payload for Msg/SubmitTx
message MsgSubmitTx {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string owner                       = 1;
  string connection_id = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
  google.protobuf.Any msg            = 3;
}

// TODO(TEST-53): Remove this pre-launch (no need for clients to create / interact with ICAs)
// MsgSubmitTxResponse defines the response for Msg/SubmitTx
message MsgSubmitTxResponse {}

message MsgRegisterHostZone{
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string connection_id = 2 [ (gogoproto.moretags) = "yaml:\"connection_id\"" ];
  string host_denom = 4 [ (gogoproto.moretags) = "yaml:\"host_denom\"" ];
  string ibc_denom = 5 [ (gogoproto.moretags) = "yaml:\"ibc_denom\"" ];
  string creator = 6;
  string transfer_channel_id = 10 [ (gogoproto.moretags) = "yaml:\"transfer_channel_id\"" ];
  uint64 unbonding_frequency = 11 [ (gogoproto.moretags) = "yaml:\"unbonding_frequency\"" ];
}

// TODO(TEST-53): Remove this pre-launch (no need for clients to create / interact with ICAs)
message MsgRegisterHostZoneResponse{}

message MsgClaimUndelegatedTokens {
  string creator = 1;
  string hostZone = 2;
  uint64 maxClaims = 3;
}

message MsgClaimUndelegatedTokensResponse {
}

// this line is used by starport scaffolding # proto/tx/message
